config: restructure the project dir config.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    //The link bellow helped a lot in the setup of the debug for VsCode
+    //https://dev.to/talhabalaj/setup-visual-studio-code-for-multi-file-c-projects-1jpi
     "version": "0.2.0",
     "configurations": [
         {
